# Fastapi_productapi

./: .env  Dockerfile  pyproject.toml
Database/: setting.py
approute/: routes.py
medipak/: main.py
models/: product_category.py  product_model.py
